CHANGES IN VERSION 1.18.0
-------------------------

NEW FEATURES

  o read_meme(readsites.meta.tidy): New option to tidy the output of the
    readsites.meta option into a single data.frame.

MINOR CHANGES

  o create_motif(): More robust argument checking.

BUG FIXES

  o Clean up output of argument checks internal to exported functions.

  o Delete a reference in IntroductionToSequenceMotifs vignette to a
    non-exported function.

  o Delete outdated in MotifManipulation vignette regarding convert_motifs
    function.

CHANGES IN VERSION 1.16.0
-------------------------

NEW FEATURES

    o write_transfac(name.tag, altname.tag): New arguments to manually set the
      name and altname tags in the final TRANSFAC motifs.

MINOR CHANGES

    o write_matrix(positions): Partial argument matching allowed.

    o motif_tree(): Silence messages from ggtree.

BUG FIXES

    o create_motif(): Don't ignore the nsites argument when generating random
      motifs.

    o read_meme(): Correctly parse background if lines are prepended with a
      space.

    o convert_type(pseudocount): Change the pseudocount within the motif when
      performing a type conversion and the option is set.

CHANGES IN VERSION 1.14.1
-------------------------

BUG FIXES

    o read_meme(): Handle motif files with custom alphabets and no 'END'
      line in alphabet definition. Thanks to @manoloff (#24) for the bug
      report, and Spencer Nystrom for the fix (#25).

CHANGES IN VERSION 1.14.0
-------------------------

NEW FEATURES

    o enrich_motifs(mode, pseudocount): Choose whether to count motif hits
      once per sequence, and whether to add a pseudocount for P-value
      calculation.

    o New function, meme_alph(): Create MEME custom alphabet definition files.

    o merge_similar(return.clusters): Return the clusters without merging.

    o convert_motifs(): MotifDb-MotifList now available as an output format.

MINOR CHANGES
