@@ -1,6 +1,6 @@
 Package: universalmotif
 Title: Import, Modify, and Export Motifs with R
-Version: 1.17.2
+Version: 1.17.3
 Authors@R: c(
       person(c("Benjamin", "Jean-Marie"), "Tremblay", role = c("aut", "cre"),
         email = "benjamin.tremblay@uwaterloo.ca",
@@ -20,7 +20,7 @@ Depends: R (>= 3.5.0)
 License: GPL-3
 Encoding: UTF-8
 Imports: methods, stats, utils, MASS, ggplot2, yaml, IRanges, Rcpp,
-    Biostrings, BiocGenerics, S4Vectors, rlang, grid
+    Biostrings, BiocGenerics, S4Vectors, rlang, grid, MatrixGenerics
 Suggests: spelling, knitr, bookdown, TFBSTools, rmarkdown, MotifDb, testthat,
     BiocParallel, seqLogo, motifStack, dplyr, ape, ggtree, processx,
     ggseqlogo, cowplot, GenomicRanges, ggbio
