@@ -99,14 +99,10 @@ exportMethods(convert_motifs)
 exportMethods(create_motif)
 importFrom(BiocGenerics,as.data.frame)
 importFrom(BiocGenerics,cbind)
-importFrom(BiocGenerics,colMeans)
-importFrom(BiocGenerics,colSums)
 importFrom(BiocGenerics,colnames)
 importFrom(BiocGenerics,ncol)
 importFrom(BiocGenerics,normalize)
 importFrom(BiocGenerics,nrow)
-importFrom(BiocGenerics,rowMeans)
-importFrom(BiocGenerics,rowSums)
 importFrom(BiocGenerics,rownames)
 importFrom(BiocGenerics,subset)
 importFrom(Biostrings,AAString)
@@ -140,6 +136,10 @@ importFrom(IRanges,IRanges)
 importFrom(IRanges,findOverlaps)
 importFrom(IRanges,stack)
 importFrom(MASS,fitdistr)
+importFrom(MatrixGenerics,colMeans)
+importFrom(MatrixGenerics,colSums)
+importFrom(MatrixGenerics,rowMeans)
+importFrom(MatrixGenerics,rowSums)
 importFrom(Rcpp,sourceCpp)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,Rle)
